# SQLite-C-CMake

./: .clang-format  .gitignore  BankAccount.cpp  BankAccount.h  CMakeLists.txt  README.md  bash  ci.yml  cmake  cpp  css  main.cpp  markdown  yaml
.github/workflows/: c-cpp.yml  codeql.yml
include/: BankAccount.h  database.h
src_fixed/: BankAccount.cpp  database.cpp  database.cpp   main.cpp
tests/: test_database.cpp
